build: build detail html & css

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <title>Document</title>
 </head>
 
-<body class="">
+<body class="dark">
   <header>
     <nav class="navbar">
-      <span>Where in the world?</span>
+      <a href="./index.html">Where in the world?</a>
       <button class="mode-toggle">
         <i class="fa-regular fa-moon"></i>
         Dark Mode
@@ -36,7 +36,8 @@
   </header>
 
   <main>
-    <div class="search-bar">
+
+    <!-- <div class="search-bar">
       <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
       <input id="search" type="text" placeholder="Search for a country...">
 
@@ -93,9 +94,60 @@
           <span>Seoul</span>
         </p>
       </div>
+    </div> -->
+
+    <div class="detail">
+      <div class="home-btn">
+        <i class="fa-solid fa-arrow-left"></i>
+        <button>Back</button>
+      </div>
+      <div class="country-detail">
+        <img class="flag" src="https://flagcdn.com/kr.svg" alt="flag">
+        <div class="title">South Korea</div>
+        <div class="location">
+          <p>
+            Native Name:
+            <span>대한민국</span>
+          </p>
+          <p>
+            Population:
+            <span>51780579</span>
+          </p>
+          <p>
+            Region:
+            <span>Asia</span>
+          </p>
+          <p>
+            Sub Region:
+            <span>Eastern Asia</span>
+          </p>
+          <p>
+            Capital:
+            <span>Seoul</span>
+          </p>
+        </div>
+
+        <div class="cultural">
+          <p>
+            Top Level Domain:
+            <span>.kr</span>
+          </p>
+          <p>
+            Currencies:
+            <span>South Korean won</span>
+          </p>
+          <p>
+            Languages:
+            <span>Korean</span>
+          </p>
+        </div>
+
+        <div class="border-country">
+          <p>Border Countries:</p>
+          <a href="#">North Korea</a>
+        </div>
+      </div>
     </div>
-
-
   </main>
 
   <footer></footer>
