--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>Document</title>
 </head>
 
-<body class="dark">
+<body>
   <header>
     <nav class="navbar">
       <a href="./index.html">Where in the world?</a>
@@ -36,11 +36,9 @@
   </header>
 
   <main>
-
-    <!-- <div class="search-bar">
+    <div class="search-bar">
       <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
       <input id="search" type="text" placeholder="Search for a country...">
-
     </div>
 
     <div class="filter-switch">
@@ -58,98 +56,62 @@
       </ul>
     </div>
 
-    <div class="country">
-      <img class="flag" src="https://flagcdn.com/jp.svg" alt="flag">
-      <div class="country-title">Japan</div>
-      <div class="country-content">
-        <p class="population">
-          Population:
-          <span>125836021</span>
-        </p>
-        <p class="region">
-          Region:
-          <span>Asia</span>
-        </p>
-        <p class="capital">
-          Capital:
-          <span>Tokyo</span>
-        </p>
-      </div>
+    <div class="cards-container">
+      <!-- insert country card here -->
     </div>
 
-    <div class="country">
+    <div class="home-btn">
+      <i class="fa-solid fa-arrow-left"></i>
+      <button>Back</button>
+    </div>
+    <div class="country-detail">
       <img class="flag" src="https://flagcdn.com/kr.svg" alt="flag">
-      <div class="country-title">South Korea</div>
-      <div class="country-content">
-        <p class="population">
+      <div class="title">South Korea</div>
+      <div class="location">
+        <p>
+          Native Name:
+          <span>대한민국</span>
+        </p>
+        <p>
           Population:
           <span>51780579</span>
         </p>
-        <p class="region">
+        <p>
           Region:
           <span>Asia</span>
         </p>
-        <p class="capital">
+        <p>
+          Sub Region:
+          <span>Eastern Asia</span>
+        </p>
+        <p>
           Capital:
           <span>Seoul</span>
         </p>
       </div>
-    </div> -->
 
-    <div class="detail">
-      <div class="home-btn">
-        <i class="fa-solid fa-arrow-left"></i>
-        <button>Back</button>
+      <div class="cultural">
+        <p>
+          Top Level Domain:
+          <span>.kr</span>
+        </p>
+        <p>
+          Currencies:
+          <span>South Korean won</span>
+        </p>
+        <p>
+          Languages:
+          <span>Korean</span>
+        </p>
       </div>
-      <div class="country-detail">
-        <img class="flag" src="https://flagcdn.com/kr.svg" alt="flag">
-        <div class="title">South Korea</div>
-        <div class="location">
-          <p>
-            Native Name:
-            <span>대한민국</span>
-          </p>
-          <p>
-            Population:
-            <span>51780579</span>
-          </p>
-          <p>
-            Region:
-            <span>Asia</span>
-          </p>
-          <p>
-            Sub Region:
-            <span>Eastern Asia</span>
-          </p>
-          <p>
-            Capital:
-            <span>Seoul</span>
-          </p>
-        </div>
 
-        <div class="cultural">
-          <p>
-            Top Level Domain:
-            <span>.kr</span>
-          </p>
-          <p>
-            Currencies:
-            <span>South Korean won</span>
-          </p>
-          <p>
-            Languages:
-            <span>Korean</span>
-          </p>
-        </div>
-
-        <div class="border-country">
-          <p>Border Countries:</p>
-          <a href="#">North Korea</a>
-        </div>
+      <div class="border-country">
+        <p>Border Countries:</p>
+        <button class="border" data-country="North Korea">North Korea</button>
       </div>
     </div>
+    </div> -->
   </main>
-
   <footer></footer>
 </body>
 
