--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <i class="fa-solid fa-angle-down"></i>
       </div>
 
-      <ul class="region-options">
+      <ul class="region-options hidden">
         <li class="option" data-value="africa">Africa</li>
         <li class="option" data-value="america">America</li>
         <li class="option" data-value="asia">Asia</li>
@@ -56,9 +56,7 @@
       </ul>
     </div>
 
-    <div class="cards-container">
-      <!-- insert country card here -->
-    </div>
+    <div class="cards-container"></div>
 
   </main>
 
