feat: add search by region feature

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       </div>
 
       <ul class="region-options hidden">
-        <li class="option" data-value="africa">Africa</li>
-        <li class="option" data-value="america">America</li>
-        <li class="option" data-value="asia">Asia</li>
-        <li class="option" data-value="europe">Europe</li>
-        <li class="option" data-value="oceania">Oceania</li>
+        <li class="option" data-region="africa">Africa</li>
+        <li class="option" data-region="america">America</li>
+        <li class="option" data-region="asia">Asia</li>
+        <li class="option" data-region="europe">Europe</li>
+        <li class="option" data-region="oceania">Oceania</li>
       </ul>
     </div>
 
