refactor: refactor footer & style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 
   </main>
 
-  <footer></footer>
+  <footer>
+    <div class="attribution">
+      Challenge by Frontend Mentor. Coded by <a href="https://github.com/YAcodingroom">YAL</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
