build: add desktop view

--- a/index.html
+++ b/index.html
@@ -36,25 +36,27 @@
   </header>
 
   <main>
-    <div class="search-bar">
-      <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
-      <input id="search" type="text" placeholder="Search for a country...">
-    </div>
-
-    <div class="filter-switch">
-      <div class="region-selector">
-        <button>Filter by Region</button>
-        <i class="fa-solid fa-angle-down"></i>
+    <section class="tool-section">
+      <div class="search-bar">
+        <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
+        <input id="search" type="text" placeholder="Search for a country...">
       </div>
 
-      <ul class="region-options hidden">
-        <li class="option" data-region="africa">Africa</li>
-        <li class="option" data-region="america">America</li>
-        <li class="option" data-region="asia">Asia</li>
-        <li class="option" data-region="europe">Europe</li>
-        <li class="option" data-region="oceania">Oceania</li>
-      </ul>
-    </div>
+      <div class="filter-switch">
+        <div class="region-selector">
+          <button>Filter by Region</button>
+          <i class="fa-solid fa-angle-down"></i>
+        </div>
+
+        <ul class="region-options hidden">
+          <li class="option" data-region="africa">Africa</li>
+          <li class="option" data-region="america">America</li>
+          <li class="option" data-region="asia">Asia</li>
+          <li class="option" data-region="europe">Europe</li>
+          <li class="option" data-region="oceania">Oceania</li>
+        </ul>
+      </div>
+    </section>
 
     <div class="cards-container"></div>
 
