refactor: refactor html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- js -->
   <script defer src="./js/script.js"></script>
 
-  <title>Document</title>
+  <title>what's the country</title>
 </head>
 
 <body>
